try project eta,lam instead

--- a/hierarchy/test - 副本 - 副本 (Copy).ipynb
+++ b/hierarchy/test - 副本 - 副本 (Copy).ipynb
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1538,6 +1538,7 @@
     "    abs_var_nodes = {}\n",
     "    Bs = {}\n",
     "    ks = {}\n",
+    "    k2s = {}\n",
     "    r = 2\n",
     "\n",
     "    # === 1. Build Abstraction Variables ===\n",
@@ -1551,18 +1552,18 @@
     "            r = r_reduced\n",
     "\n",
     "        sid = sn.variableID\n",
-    "        varis_sup_mu = sn.mu\n",
-    "        varis_sup_sigma = sn.Sigma\n",
+    "        varis_sup_eta = sn.belief.eta\n",
+    "        varis_sup_lam = sn.belief.lam\n",
     "        \n",
     "        # Step 1: Eigen decomposition of the covariance matrix\n",
-    "        eigvals, eigvecs = np.linalg.eigh(varis_sup_sigma)\n",
+    "        eigvals, eigvecs = np.linalg.eigh(varis_sup_lam)\n",
     "\n",
     "        # Step 2: Sort eigenvalues and eigenvectors in descending order of eigenvalues\n",
     "        idx = np.argsort(eigvals)[::-1]      # Get indices of sorted eigenvalues (largest first)\n",
     "        eigvals = eigvals[idx]               # Reorder eigenvalues\n",
     "\n",
-    "        if sid == 0:\n",
-    "            print(eigvals)\n",
+    "\n",
+    "        print(eigvals)\n",
     "        eigvecs = eigvecs[:, idx]            # Reorder corresponding eigenvectors\n",
     "\n",
     "        # Step 3: Select the top-k eigenvectors to form the projection matrix (principal subspace)\n",
@@ -1570,12 +1571,13 @@
     "        Bs[sid] = B_reduced                        # Store the projection matrix for this variable\n",
     "\n",
     "        # Step 4: Project eta and Lam onto the reduced 2D subspace\n",
-    "        varis_abs_mu = B_reduced.T @ varis_sup_mu          # Projected natural mean: shape (2,)\n",
-    "        varis_abs_sigma = B_reduced.T @ varis_sup_sigma @ B_reduced  # Projected covariance: shape (2, 2)\n",
-    "        ks[sid] = varis_sup_mu - B_reduced @ varis_abs_mu  # Store the offset for this variable\n",
+    "        varis_abs_eta = B_reduced.T @ varis_sup_eta          # Projected natural mean: shape (2,)\n",
+    "        varis_abs_lam = B_reduced.T @ varis_sup_lam @ B_reduced  # Projected covariance: shape (2, 2)\n",
+    "        ks[sid] = varis_sup_eta- B_reduced @ varis_abs_eta  # Store the offset for this variable\n",
+    "        k2s[sid] = varis_sup_lam - B_reduced @ varis_abs_lam @ B_reduced.T  # Residual covariance \n",
     "\n",
-    "        varis_abs_lam = np.linalg.inv(varis_abs_sigma)  # Inverse covariance (precision matrix): shape (2, 2)\n",
-    "        varis_abs_eta = varis_abs_lam @ varis_abs_mu  # Natural parameters: shape (2,)\n",
+    "        varis_abs_sigma = np.linalg.inv(varis_abs_lam)  # Inverse covariance (precision matrix): shape (2, 2)\n",
+    "        varis_abs_mu = varis_abs_sigma @ varis_abs_eta  # Natural parameters: shape (2,)\n",
     "\n",
     "        v = VariableNode(sid, dofs=r)\n",
     "        v.GT = sn.GT\n",
@@ -1597,10 +1599,10 @@
     "        k = ks[abs_id]\n",
     "\n",
     "        def meas_fn_abs_prior(x_abs, *args):\n",
-    "            return sup_factor.meas_fn(B @ x_abs + k)\n",
+    "            return sup_factor.meas_fn()\n",
     "        \n",
     "        def jac_fn_abs_prior(x_abs, *args):\n",
-    "            return sup_factor.jac_fn(B @ x_abs + k) @ B\n",
+    "            return sup_factor.jac_fn()\n",
     "\n",
     "\n",
     "        return meas_fn_abs_prior, jac_fn_abs_prior, sup_factor.measurement, sup_factor.measurement_lambda\n",
@@ -1613,8 +1615,9 @@
     "        i, j = vids # two variable IDs\n",
     "        ni = abs_var_nodes[i].dofs\n",
     "        Bi, Bj = Bs[i], Bs[j]\n",
-    "        ki, kj = ks[i], ks[j]                       \n",
-    "\n",
+    "        ki, kj = ks[i], ks[j] \n",
+    "        k2i, k2j = k2s[i], k2s[j]    \n",
+    "                     \n",
     "\n",
     "        def meas_fn_super_between(xij, *args):\n",
     "            xi, xj = xij[:ni], xij[ni:]\n",
