--- a/hierarchy/test - 副本 - 副本.ipynb
+++ b/hierarchy/test - 副本 - 副本.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 621,
    "id": "f7f39044",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 622,
    "id": "0f6f6b31",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 623,
    "id": "7f8f1fe2",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 624,
    "id": "c4d9f60f",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 625,
    "id": "e13ace2a",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 626,
    "id": "d0e18f77",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 627,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 628,
    "id": "9a726136",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 629,
    "id": "be439a32",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 630,
    "id": "95c7cdb2",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 631,
    "id": "3e1ea9f9",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1772,7 @@
        "2"
       ]
      },
-     "execution_count": 608,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 632,
    "id": "3a5e78c4",
    "metadata": {},
    "outputs": [
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 633,
    "id": "bbf7f4c0",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 634,
    "id": "a8bccbca",
    "metadata": {},
    "outputs": [
@@ -2060,11 +2060,7 @@
      "output_type": "stream",
      "text": [
       "[86.45093657 86.45093657 19.99999996 19.99999996 19.99999996 19.99999996\n",
-      " 17.99350707 17.99350707]\n",
-      "[-5.95694171 -2.1236632  -5.87349705 11.20142968 -0.89281828 21.99152717\n",
-      " -7.32162411 30.87354717]\n",
-      "[-5.95694171 -2.1236632  -5.87349705 11.20142968 -0.89281828 21.99152717\n",
-      " -7.32162411 30.87354717]\n"
+      " 17.99350707 17.99350707]\n"
      ]
     }
    ],
@@ -2091,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 635,
    "id": "d8aaa6cc",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 636,
    "id": "38ca646c",
    "metadata": {},
    "outputs": [
@@ -2163,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 637,
    "id": "9b2eb329",
    "metadata": {},
    "outputs": [
@@ -2197,76 +2193,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 645,
    "id": "bd7766e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.08344467, 13.32509288,  5.06412343, 24.11519037, -2.16274592,\n",
+       "       33.78168724,  4.98067877, 10.79009749, -2.24619059, 20.45659436,\n",
+       "       -7.22686935,  9.66649686, -0.8648301 , -7.12908399, -0.78138544,\n",
+       "        6.19600889,  4.19929333, 16.98610639, -3.02757602, 26.65260325])"
+      ]
+     },
+     "execution_count": 645,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "absgraph.factors[0].meas_fn(np.array([0.0,20.0]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 638,
    "id": "ba73f892",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.30001906e-03, 7.41083609e-19],\n",
-       "       [7.41083609e-19, 1.30001906e-03]])"
+       "array([[ 8.03474618e-04,  1.07819391e-19,  8.03474618e-04,\n",
+       "         5.71326119e-20,  8.03474618e-04,  5.71326119e-20,\n",
+       "        -9.45518995e-04, -2.68776128e-20],\n",
+       "       [ 1.07819391e-19,  8.03474618e-04, -6.62481948e-20,\n",
+       "         8.03474618e-04, -6.62481948e-20,  8.03474618e-04,\n",
+       "        -1.03313534e-19, -9.45518995e-04],\n",
+       "       [ 8.03474618e-04, -6.62481948e-20,  8.03474618e-04,\n",
+       "        -1.16934974e-19,  8.03474618e-04, -1.16934974e-19,\n",
+       "        -9.45518995e-04,  1.77962970e-19],\n",
+       "       [ 5.71326119e-20,  8.03474618e-04, -1.16934974e-19,\n",
+       "         8.03474618e-04, -1.16934974e-19,  8.03474618e-04,\n",
+       "        -4.36659590e-20, -9.45518995e-04],\n",
+       "       [ 8.03474618e-04, -6.62481948e-20,  8.03474618e-04,\n",
+       "        -1.16934974e-19,  8.03474618e-04, -1.16934974e-19,\n",
+       "        -9.45518995e-04,  1.77962970e-19],\n",
+       "       [ 5.71326119e-20,  8.03474618e-04, -1.16934974e-19,\n",
+       "         8.03474618e-04, -1.16934974e-19,  8.03474618e-04,\n",
+       "        -4.36659590e-20, -9.45518995e-04],\n",
+       "       [-9.45518995e-04, -1.03313534e-19, -9.45518995e-04,\n",
+       "        -4.36659590e-20, -9.45518995e-04, -4.36659590e-20,\n",
+       "         4.97683256e-03, -1.22642634e-19],\n",
+       "       [-2.68776128e-20, -9.45518995e-04,  1.77962970e-19,\n",
+       "        -9.45518995e-04,  1.77962970e-19, -9.45518995e-04,\n",
+       "        -1.22642634e-19,  4.97683256e-03]])"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Bs[0].T@supergraph.factors[2].messages[0].lam@Bs[0]"
+    "Bs[0]@absgraph.factors[2].messages[0].lam@Bs[0].T + (np.eye(8)- Bs[0]@Bs[0].T)@supergraph.factors[2].messages[0].lam@(np.eye(8)- Bs[0]@Bs[0].T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
+   "id": "2caf16b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.00714286, 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.00714286]])"
+      ]
+     },
+     "execution_count": 639,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "supergraph.factors[2].messages[0].lam "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 640,
    "id": "12cf8e50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.58088809e-03, 9.64738431e-19],\n",
-       "       [9.64738431e-19, 1.58088809e-03]])"
+       "array([[ 3.92623815e-02, -2.05248239e-18, -1.07376185e-02,\n",
+       "        -1.35263923e-18, -1.07376185e-02, -1.35263923e-18,\n",
+       "        -8.99894626e-03, -1.03250136e-18],\n",
+       "       [-2.05248239e-18,  3.92623815e-02,  3.50905852e-19,\n",
+       "        -1.07376185e-02,  3.50905852e-19, -1.07376185e-02,\n",
+       "        -1.88967804e-18, -8.99894626e-03],\n",
+       "       [-1.07376185e-02,  3.50905852e-19,  3.92623815e-02,\n",
+       "         1.05074901e-18, -1.07376185e-02,  1.05074901e-18,\n",
+       "        -8.99894626e-03,  6.42587408e-19],\n",
+       "       [-1.35263923e-18, -1.07376185e-02,  1.05074901e-18,\n",
+       "         3.92623815e-02,  1.05074901e-18, -1.07376185e-02,\n",
+       "        -1.40190857e-18, -8.99894626e-03],\n",
+       "       [-1.07376185e-02,  3.50905852e-19, -1.07376185e-02,\n",
+       "         1.05074901e-18,  3.92623815e-02,  1.05074901e-18,\n",
+       "        -8.99894626e-03,  6.42587408e-19],\n",
+       "       [-1.35263923e-18, -1.07376185e-02,  1.05074901e-18,\n",
+       "        -1.07376185e-02,  1.05074901e-18,  3.92623815e-02,\n",
+       "        -1.40190857e-18, -8.99894626e-03],\n",
+       "       [-8.99894626e-03, -1.88967804e-18, -8.99894626e-03,\n",
+       "        -1.40190857e-18, -8.99894626e-03, -1.40190857e-18,\n",
+       "         4.22128556e-02, -1.06847064e-18],\n",
+       "       [-1.03250136e-18, -8.99894626e-03,  6.42587408e-19,\n",
+       "        -8.99894626e-03,  6.42587408e-19, -8.99894626e-03,\n",
+       "        -1.06847064e-18,  4.22128556e-02]])"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 640,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "absgraph.factors[2].messages[0].lam "
+    "Bs[0]@absgraph.factors[0].messages[0].lam@Bs[0].T + (np.eye(8)- Bs[0]@Bs[0].T)@supergraph.factors[0].messages[0].lam@(np.eye(8)- Bs[0]@Bs[0].T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 641,
    "id": "891cc038",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([52.1165681 ,  5.44711511, 38.15757778, 11.67015352, 40.26006536,\n",
-       "       20.68001639])"
+       "array([[ 0.04,  0.  , -0.01,  0.  , -0.01,  0.  , -0.01,  0.  ],\n",
+       "       [ 0.  ,  0.04,  0.  , -0.01,  0.  , -0.01,  0.  , -0.01],\n",
+       "       [-0.01,  0.  ,  0.04,  0.  , -0.01,  0.  , -0.01,  0.  ],\n",
+       "       [ 0.  , -0.01,  0.  ,  0.04,  0.  , -0.01,  0.  , -0.01],\n",
+       "       [-0.01,  0.  , -0.01,  0.  ,  0.04,  0.  , -0.01,  0.  ],\n",
+       "       [ 0.  , -0.01,  0.  , -0.01,  0.  ,  0.04,  0.  , -0.01],\n",
+       "       [-0.01,  0.  , -0.01,  0.  , -0.01,  0.  ,  0.04,  0.  ],\n",
+       "       [ 0.  , -0.01,  0.  , -0.01,  0.  , -0.01,  0.  ,  0.04]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 641,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.solve(supergraph.var_nodes[1].belief.lam, supergraph.var_nodes[1].belief.eta)"
+    "supergraph.factors[0].messages[0].lam"
    ]
   },
   {
