--- a/hierarchy/test - 副本 - 副本.ipynb
+++ b/hierarchy/test - 副本 - 副本.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 1,
    "id": "f7f39044",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 2,
    "id": "0f6f6b31",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 3,
    "id": "7f8f1fe2",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 4,
    "id": "c4d9f60f",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 5,
    "id": "e13ace2a",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 6,
    "id": "d0e18f77",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 7,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 8,
    "id": "9a726136",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 9,
    "id": "be439a32",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 10,
    "id": "95c7cdb2",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 11,
    "id": "3e1ea9f9",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1772,7 @@
        "2"
       ]
      },
-     "execution_count": 631,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 12,
    "id": "3a5e78c4",
    "metadata": {},
    "outputs": [
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 13,
    "id": "bbf7f4c0",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 14,
    "id": "a8bccbca",
    "metadata": {},
    "outputs": [
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 15,
    "id": "d8aaa6cc",
    "metadata": {},
    "outputs": [
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 16,
    "id": "38ca646c",
    "metadata": {},
    "outputs": [
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 17,
    "id": "9b2eb329",
    "metadata": {},
    "outputs": [
@@ -2193,26 +2193,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 21,
    "id": "bd7766e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.08344467, 13.32509288,  5.06412343, 24.11519037, -2.16274592,\n",
-       "       33.78168724,  4.98067877, 10.79009749, -2.24619059, 20.45659436,\n",
-       "       -7.22686935,  9.66649686, -0.8648301 , -7.12908399, -0.78138544,\n",
-       "        6.19600889,  4.19929333, 16.98610639, -3.02757602, 26.65260325])"
+       "array([0.29439236, 0.04691636])"
       ]
      },
-     "execution_count": 645,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "absgraph.factors[0].meas_fn(np.array([0.0,20.0]))"
+    "absgraph.factors[2].messages[1].eta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "61577aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0001792 , 0.07251108])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "absgraph.factors[2].messages[0].eta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d1cbd6cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00688973,  0.12122782])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs[0].T@supergraph.factors[2].messages[0].eta"
    ]
   },
   {
