--- a/hierarchy2/test.ipynb
+++ b/hierarchy2/test.ipynb
@@ -2,175 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "f7f39044",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numeric     : [-1.38493497 -0.40243648]\n",
+      "correct (-J r): [-1.38493497 -0.40243647]   |err|= 3.058302616545954e-10\n",
+      "old (+J r)    : [1.38493497 0.40243647]   |err|= 2.884441020424412\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "from gbp.gbp import FactorGraph, VariableNode, Factor\n",
     "\n",
-    "# -----------------------\n",
-    "# SLAM-like base graph\n",
-    "# -----------------------\n",
-    "def make_slam_like_graph(N=100, step_size=25, loop_prob=0.05, loop_radius=50, prior_prop=0.0, rng=None,):\n",
-    "    nodes, edges = [], []\n",
-    "    positions = []\n",
-    "    x, y = 0.0, 0.0\n",
-    "    positions.append((x, y))\n",
-    "    for _ in range(1, int(N)):\n",
-    "        dx, dy = np.random.randn(2)\n",
-    "        norm = np.sqrt(dx**2 + dy**2) + 1e-6\n",
-    "        dx, dy = dx / norm * float(step_size), dy / norm * float(step_size)\n",
-    "        x, y = x + dx, y + dy\n",
-    "        positions.append((x, y))\n",
-    "    for i, (px, py) in enumerate(positions):\n",
-    "        nodes.append({\n",
-    "            \"data\": {\"id\": f\"{i}\", \"layer\": 0, \"dim\": 2},\n",
-    "            \"position\": {\"x\": float(px), \"y\": float(py)}\n",
-    "        })\n",
-    "    for i in range(int(N) - 1):\n",
-    "        edges.append({\"data\": {\"source\": f\"{i}\", \"target\": f\"{i+1}\"}})\n",
-    "    for i in range(int(N)):\n",
-    "        for j in range(i + 5, int(N)):\n",
-    "            if np.random.rand() < float(loop_prob):\n",
-    "                xi, yi = positions[i]; xj, yj = positions[j]\n",
-    "                if np.hypot(xi-xj, yi-yj) < float(loop_radius):\n",
-    "                    edges.append({\"data\": {\"source\": f\"{i}\", \"target\": f\"{j}\"}})\n",
+    "def r_of_theta(theta, dp):\n",
+    "    c, s = np.cos(theta), np.sin(theta)\n",
+    "    RT = np.array([[c, s], [-s, c]])  # R(theta)^T\n",
+    "    return RT @ dp\n",
     "\n",
-    "    # 确定强先验的节点集合\n",
-    "    if rng is None:\n",
-    "        rng = np.random.default_rng()\n",
+    "theta = 0.7\n",
+    "dp = np.array([1.2, -0.8])\n",
     "\n",
-    "    if prior_prop <= 0.0:\n",
-    "        strong_ids = {0}\n",
-    "    elif prior_prop >= 1.0:\n",
-    "        strong_ids = set(range(N))\n",
-    "    else:\n",
-    "        k = max(1, int(np.floor(prior_prop * N)))\n",
-    "        strong_ids = set(rng.choice(N, size=k, replace=False).tolist())\n",
+    "# 数值导（中心差分）\n",
+    "eps = 1e-7\n",
+    "rn = r_of_theta(theta + eps, dp)\n",
+    "rp = r_of_theta(theta - eps, dp)\n",
+    "dr_num = (rn - rp) / (2*eps)\n",
     "\n",
-    "    # 给 strong prior 节点加 edge\n",
-    "    for i in strong_ids:\n",
-    "        edges.append({\n",
-    "            \"data\": {\"source\": f\"{i}\", \"target\": \"prior\"}\n",
-    "        })\n",
+    "# 正确解析导：-J r = [ r_y, -r_x ]\n",
+    "r = r_of_theta(theta, dp)\n",
+    "dr_correct = np.array([ r[1], -r[0] ])\n",
     "\n",
+    "# 旧写法（错误）：+J r = [-r_y, r_x]\n",
+    "dr_old = np.array([-r[1],  r[0]])\n",
     "\n",
-    "    return nodes, edges\n",
-    "\n",
-    "# -----------------------\n",
-    "# GBP Graph 构建\n",
-    "# -----------------------\n",
-    "def build_noisy_pose_graph(\n",
-    "    nodes,\n",
-    "    edges,\n",
-    "    prior_sigma: float = 10,\n",
-    "    odom_sigma: float = 10,\n",
-    "    tiny_prior: float = 1e-10,\n",
-    "    rng=None,\n",
-    "):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    构造二维 pose-only 因子图（线性，高斯），并注入噪声。\n",
-    "    参数:\n",
-    "      prior_sigma : 强先验的标准差（小=强）\n",
-    "      odom_sigma  : 里程计测量噪声标准差\n",
-    "      prior_prop  : 0.0=仅 anchor；(0,1)=按比例随机选；>=1.0=全体\n",
-    "      tiny_prior  : 所有节点默认加的极小先验，防止奇异\n",
-    "      seed        : 随机种子（可复现）\n",
-    "    \"\"\"\n",
-    "\n",
-    "    fg = FactorGraph(nonlinear_factors=False, eta_damping=0)\n",
-    "\n",
-    "    var_nodes = []\n",
-    "    I2 = np.eye(2, dtype=float)\n",
-    "    N = len(nodes)\n",
-    "\n",
-    "    # ---- 预生成噪声 ----\n",
-    "    prior_noises = {}\n",
-    "    odom_noises = {}\n",
-    "\n",
-    "    if rng is None:\n",
-    "        rng = np.random.default_rng()\n",
-    "\n",
-    "    # 为所有边生成噪声\n",
-    "    for e in edges:\n",
-    "        src = e[\"data\"][\"source\"]; dst = e[\"data\"][\"target\"]\n",
-    "        # 二元边\n",
-    "        if dst != \"prior\":\n",
-    "            odom_noises[(int(src[:]), int(dst[:]))] = rng.normal(0.0, odom_sigma, size=2)\n",
-    "        # 一元边（强先验）\n",
-    "        elif dst == \"prior\":\n",
-    "            prior_noises[int(src[:])] = rng.normal(0.0, prior_sigma, size=2)\n",
-    "\n",
-    "\n",
-    "    # ---- variable nodes ----\n",
-    "    for i, n in enumerate(nodes):\n",
-    "        v = VariableNode(i, dofs=2)\n",
-    "        v.GT = np.array([n[\"position\"][\"x\"], n[\"position\"][\"y\"]], dtype=float)\n",
-    "\n",
-    "        # 极小先验\n",
-    "        v.prior.lam = tiny_prior * I2\n",
-    "        v.prior.eta = np.zeros(2, dtype=float)\n",
-    "\n",
-    "        var_nodes.append(v)\n",
-    "\n",
-    "    fg.var_nodes = var_nodes\n",
-    "    fg.n_var_nodes = len(var_nodes)\n",
-    "\n",
-    "\n",
-    "    # ---- prior factors ----\n",
-    "    def meas_fn_unary(x, *args):\n",
-    "        return x\n",
-    "    def jac_fn_unary(x, *args):\n",
-    "        return np.eye(2)\n",
-    "    # ---- odometry factors ----\n",
-    "    def meas_fn(xy, *args):\n",
-    "        return xy[2:] - xy[:2]\n",
-    "    def jac_fn(xy, *args):\n",
-    "        return np.array([[-1, 0, 1, 0],\n",
-    "                         [ 0,-1, 0, 1]], dtype=float)\n",
-    "    \n",
-    "    factors = []\n",
-    "    fid = 0\n",
-    "\n",
-    "    for e in edges:\n",
-    "        src = e[\"data\"][\"source\"]; dst = e[\"data\"][\"target\"]\n",
-    "        if dst != \"prior\":\n",
-    "            i, j = int(src[:]), int(dst[:])\n",
-    "            vi, vj = var_nodes[i], var_nodes[j]\n",
-    "\n",
-    "            meas = (vj.GT - vi.GT) + odom_noises[(i, j)]\n",
-    "\n",
-    "            meas_lambda = np.eye(len(meas))/ (odom_sigma**2)\n",
-    "            f = Factor(fid, [vi, vj], meas, meas_lambda, meas_fn, jac_fn)\n",
-    "            f.type = \"base\"\n",
-    "            linpoint = np.r_[vi.GT, vj.GT]\n",
-    "            f.compute_factor(linpoint=linpoint, update_self=True)\n",
-    "\n",
-    "            factors.append(f)\n",
-    "            vi.adj_factors.append(f)\n",
-    "            vj.adj_factors.append(f)\n",
-    "            fid += 1\n",
-    "\n",
-    "        else:\n",
-    "            i = int(src[:])\n",
-    "            vi = var_nodes[i]\n",
-    "            z = vi.GT + prior_noises[i]\n",
-    "\n",
-    "            z_lambda = np.eye(len(meas))/ (prior_sigma**2)\n",
-    "            f = Factor(fid, [vi], z, z_lambda, meas_fn_unary, jac_fn_unary)\n",
-    "            f.type = \"prior\"\n",
-    "            f.compute_factor(linpoint=z, update_self=True)\n",
-    "\n",
-    "            factors.append(f)\n",
-    "            vi.adj_factors.append(f)\n",
-    "            fid += 1\n",
-    "\n",
-    "    fg.factors = factors\n",
-    "    fg.n_factor_nodes = len(factors)\n",
-    "    return fg"
+    "print(\"numeric     :\", dr_num)\n",
+    "print(\"correct (-J r):\", dr_correct, \"  |err|=\", np.linalg.norm(dr_correct - dr_num))\n",
+    "print(\"old (+J r)    :\", dr_old,     \"  |err|=\", np.linalg.norm(dr_old - dr_num))\n"
    ]
   },
   {
