--- a/hierarchy/test_linear (keep).ipynb
+++ b/hierarchy/test_linear (keep).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db67ca04",
    "metadata": {},
    "outputs": [],
@@ -1090,8 +1090,8 @@
     "\n",
     "        v = VariableNode(sid, dofs=r)\n",
     "        v.GT = sn.GT\n",
-    "        #v.prior.lam = 1e-10 * varis_abs_lam\n",
-    "        #v.prior.eta = 1e-10 * varis_abs_eta\n",
+    "        v.prior.lam = 1e-10 * varis_abs_lam\n",
+    "        v.prior.eta = 1e-10 * varis_abs_eta\n",
     "        v.mu = varis_abs_mu\n",
     "        v.Sigma = varis_abs_sigma\n",
     "        v.belief = NdimGaussian(r, varis_abs_eta, varis_abs_lam)\n",
@@ -1229,8 +1229,8 @@
     "\n",
     "        v = VariableNode(sid, dofs=r)\n",
     "        v.GT = sn.GT\n",
-    "        #v.prior.lam = 1e-10 * varis_abs_lam\n",
-    "        #v.prior.eta = 1e-10 * varis_abs_eta\n",
+    "        v.prior.lam = 1e-10 * varis_abs_lam\n",
+    "        v.prior.eta = 1e-10 * varis_abs_eta\n",
     "        v.mu = varis_abs_mu\n",
     "        v.Sigma = abs_fg_old.var_nodes[sid].Sigma\n",
     "        v.Sigma = varis_abs_sigma\n",
@@ -1291,7 +1291,7 @@
     "\n",
     "            lin0 = v.mu\n",
     "            abs_f.compute_factor(linpoint=lin0, update_self=True)\n",
-    "            abs_f.messages = abs_fg_old.factors[f.factorID].messages\n",
+    "            #abs_f.messages = abs_fg_old.factors[f.factorID].messages\n",
     "            abs_fg.factors.append(abs_f)\n",
     "            v.adj_factors.append(abs_f)\n",
     "\n",
@@ -1305,7 +1305,7 @@
     "\n",
     "            lin0 = np.concatenate([vi.mu, vj.mu])\n",
     "            abs_f.compute_factor(linpoint=lin0, update_self=True)\n",
-    "            abs_f.messages = abs_fg_old.factors[f.factorID].messages\n",
+    "            #abs_f.messages = abs_fg_old.factors[f.factorID].messages\n",
     "            abs_fg.factors.append(abs_f)\n",
     "            vi.adj_factors.append(abs_f)\n",
     "            vj.adj_factors.append(abs_f)\n",
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0dcec503",
    "metadata": {},
    "outputs": [
@@ -2477,68 +2477,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 001 | Energy = 18457195.824197\n",
-      "Iter 002 | Energy = 18046.909338\n",
-      "Iter 003 | Energy = 16350.687444\n",
-      "Iter 004 | Energy = 15296.167284\n",
-      "Iter 005 | Energy = 14633.413990\n",
-      "Iter 006 | Energy = 14270.208737\n",
-      "Iter 007 | Energy = 14076.643918\n",
-      "Iter 008 | Energy = 13965.958587\n",
-      "Iter 009 | Energy = 13893.923321\n",
-      "Iter 010 | Energy = 13840.830010\n",
-      "Iter 011 | Energy = 13798.319213\n",
-      "Iter 012 | Energy = 13762.686482\n",
-      "Iter 013 | Energy = 13732.037362\n",
-      "Iter 014 | Energy = 13705.199807\n",
-      "Iter 015 | Energy = 13681.335406\n",
-      "Iter 016 | Energy = 13659.802601\n",
-      "Iter 017 | Energy = 13640.102956\n",
-      "Iter 018 | Energy = 13621.852326\n",
-      "Iter 019 | Energy = 13604.759170\n",
-      "Iter 020 | Energy = 13588.605744\n",
-      "Iter 021 | Energy = 13573.231671\n",
-      "Iter 022 | Energy = 13558.520092\n",
-      "Iter 023 | Energy = 13544.386466\n",
-      "Iter 024 | Energy = 13530.769811\n",
-      "Iter 025 | Energy = 13517.626047\n",
-      "Iter 026 | Energy = 13504.923042\n",
-      "Iter 027 | Energy = 13492.636996\n",
-      "Iter 028 | Energy = 13480.749821\n",
-      "Iter 029 | Energy = 13469.247284\n",
-      "Iter 030 | Energy = 13458.117679\n",
-      "Iter 031 | Energy = 13447.350912\n",
-      "Iter 032 | Energy = 13436.937858\n",
-      "Iter 033 | Energy = 13426.869933\n",
-      "Iter 034 | Energy = 13417.138806\n",
-      "Iter 035 | Energy = 13407.736218\n",
-      "Iter 036 | Energy = 13398.653878\n",
-      "Iter 037 | Energy = 13389.883404\n",
-      "Iter 038 | Energy = 13381.416303\n",
-      "Iter 039 | Energy = 13373.243981\n",
-      "Iter 040 | Energy = 13365.357758\n",
-      "Iter 041 | Energy = 13357.748897\n",
-      "Iter 042 | Energy = 13350.408645\n",
-      "Iter 043 | Energy = 13343.328261\n",
-      "Iter 044 | Energy = 13336.499059\n",
-      "Iter 045 | Energy = 13329.912437\n",
-      "Iter 046 | Energy = 13323.559911\n",
-      "Iter 047 | Energy = 13317.433139\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 140\u001b[39m\n\u001b[32m    138\u001b[39m vg.layers = layers\n\u001b[32m    139\u001b[39m vg.eta_damping = \u001b[32m0.4\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m140\u001b[39m vg.layers = \u001b[43mvg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    141\u001b[39m energy = energy_map(layers[\u001b[32m0\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mgraph\u001b[39m\u001b[33m\"\u001b[39m], include_priors=\u001b[38;5;28;01mTrue\u001b[39;00m, include_factors=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m np.abs(energy_prev-energy) < \u001b[32m1e-2\u001b[39m:\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1941\u001b[39m, in \u001b[36mVGraph.vloop\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1937\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m   1939\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m name.startswith(\u001b[33m\"\u001b[39m\u001b[33msuper\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m   1940\u001b[39m     \u001b[38;5;66;03m# Update super using the previous layer's graph\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1941\u001b[39m     layers[i][\u001b[33m\"\u001b[39m\u001b[33mgraph\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mbottom_up_modify_super_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mi\u001b[49m\u001b[43m+\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meta_damping\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43meta_damping\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1943\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m name.startswith(\u001b[33m\"\u001b[39m\u001b[33mabs\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m   1944\u001b[39m     \u001b[38;5;66;03m# Rebuild abs using the previous super\u001b[39;00m\n\u001b[32m   1945\u001b[39m     abs_graph, Bs, ks, k2s = bottom_up_modify_abs_graph(layers[:i+\u001b[32m1\u001b[39m], eta_damping=\u001b[38;5;28mself\u001b[39m.eta_damping, r_reduced=\u001b[38;5;28mself\u001b[39m.r_reduced)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1534\u001b[39m, in \u001b[36mbottom_up_modify_super_graph\u001b[39m\u001b[34m(layers, eta_damping)\u001b[39m\n\u001b[32m   1531\u001b[39m u, v = e[\u001b[33m\"\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33msource\u001b[39m\u001b[33m\"\u001b[39m], e[\u001b[33m\"\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mtarget\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m   1533\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m v == \u001b[33m\"\u001b[39m\u001b[33mprior\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m1534\u001b[39m     meas_fn, jac_fn, z, z_lambda = \u001b[43mmake_super_prior_factor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbase_graph\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfactors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1535\u001b[39m     f = Factor(\u001b[38;5;28mlen\u001b[39m(fg.factors), [super_var_nodes[u]], z, z_lambda, meas_fn, jac_fn)\n\u001b[32m   1536\u001b[39m     f.adj_beliefs = [vn.belief \u001b[38;5;28;01mfor\u001b[39;00m vn \u001b[38;5;129;01min\u001b[39;00m f.adj_var_nodes]\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1454\u001b[39m, in \u001b[36mbottom_up_modify_super_graph.<locals>.make_super_prior_factor\u001b[39m\u001b[34m(sid, base_factors)\u001b[39m\n\u001b[32m   1452\u001b[39m z_lambda_list = [f.measurement_lambda \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m in_group]\n\u001b[32m   1453\u001b[39m z_super = np.concatenate(z_list) \n\u001b[32m-> \u001b[39m\u001b[32m1454\u001b[39m z_super_lambda = \u001b[43mblock_diag\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mz_lambda_list\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1456\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m meas_fn_super_prior, jac_fn_super_prior, z_super, z_super_lambda\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/jax-gpu/lib/python3.11/site-packages/scipy/linalg/_special_matrices.py:568\u001b[39m, in \u001b[36mblock_diag\u001b[39m\u001b[34m(*arrs)\u001b[39m\n\u001b[32m    566\u001b[39m     out[r:r + rr, c:c + cc] = arrs[i]\n\u001b[32m    567\u001b[39m     r += rr\n\u001b[32m--> \u001b[39m\u001b[32m568\u001b[39m     c += cc\n\u001b[32m    569\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "Iter 001 | Energy = 9019453.125633\n",
+      "Iter 002 | Energy = 16988.657414\n",
+      "Iter 003 | Energy = 15615.322163\n",
+      "Iter 004 | Energy = 14848.760180\n",
+      "Iter 005 | Energy = 14378.476130\n",
+      "Iter 006 | Energy = 14073.635991\n",
+      "Iter 007 | Energy = 13860.453874\n",
+      "Iter 008 | Energy = 13702.516562\n",
+      "Iter 009 | Energy = 13581.155291\n",
+      "Iter 010 | Energy = 13485.977327\n",
+      "Iter 011 | Energy = 13410.506479\n",
+      "Iter 012 | Energy = 13350.287121\n",
+      "Iter 013 | Energy = 13302.035066\n",
+      "Iter 014 | Energy = 13263.231128\n",
+      "Iter 015 | Energy = 13231.905552\n",
+      "Iter 016 | Energy = 13206.507977\n",
+      "Iter 017 | Energy = 13185.818045\n",
+      "Iter 018 | Energy = 13168.877547\n",
+      "Iter 019 | Energy = 13154.935987\n",
+      "Iter 020 | Energy = 13143.406165\n",
+      "Iter 021 | Energy = 13133.828091\n",
+      "Iter 022 | Energy = 13125.840118\n",
+      "Iter 023 | Energy = 13119.156269\n",
+      "Iter 024 | Energy = 13113.548716\n",
+      "Iter 025 | Energy = 13108.834447\n",
+      "Iter 026 | Energy = 13104.865189\n",
+      "Iter 027 | Energy = 13101.519831\n",
+      "Iter 028 | Energy = 13098.698727\n",
+      "Iter 029 | Energy = 13096.319362\n",
+      "Iter 030 | Energy = 13094.313049\n",
+      "Iter 031 | Energy = 13092.622362\n",
+      "Iter 032 | Energy = 13091.199113\n",
+      "Iter 033 | Energy = 13090.002753\n",
+      "Iter 034 | Energy = 13088.999072\n",
+      "Iter 035 | Energy = 13088.159147\n",
+      "Iter 036 | Energy = 13087.458476\n",
+      "Iter 037 | Energy = 13086.876269\n",
+      "Iter 038 | Energy = 13086.394855\n",
+      "Iter 039 | Energy = 13085.999192\n",
+      "Iter 040 | Energy = 13085.676458\n",
+      "Iter 041 | Energy = 13085.415710\n",
+      "Iter 042 | Energy = 13085.207599\n",
+      "Iter 043 | Energy = 13085.044131\n",
+      "Iter 044 | Energy = 13084.918462\n",
+      "Iter 045 | Energy = 13084.824733\n",
+      "Iter 046 | Energy = 13084.757926\n",
+      "Iter 047 | Energy = 13084.713739\n",
+      "Iter 048 | Energy = 13084.688489\n"
      ]
     }
    ],
@@ -2571,7 +2557,7 @@
     "basegraph = layers[0][\"graph\"]\n",
     "\n",
     "\n",
-    "kk = 18\n",
+    "kk = 15\n",
     "k_next = 1\n",
     "super_layer_idx = k_next*2 - 1\n",
     "last = layers[-1]\n",
@@ -2619,6 +2605,7 @@
     "layers[abs_layer_idx][\"graph\"], layers[abs_layer_idx][\"Bs\"], layers[abs_layer_idx][\"ks\"], layers[abs_layer_idx][\"k2s\"] = build_abs_graph(layers)\n",
     "\n",
     "\n",
+    "\n",
     "k_next = 3\n",
     "super_layer_idx = k_next*2 - 1\n",
     "last = layers[-1]\n",
@@ -2641,29 +2628,6 @@
     "layers.append({\"name\":f\"abs{k}\", \"nodes\":abs_nodes, \"edges\":abs_edges})\n",
     "layers[abs_layer_idx][\"graph\"], layers[abs_layer_idx][\"Bs\"], layers[abs_layer_idx][\"ks\"], layers[abs_layer_idx][\"k2s\"] = build_abs_graph(layers)\n",
     "\n",
-    "\"\"\"\n",
-    "k_next = 4\n",
-    "super_layer_idx = k_next*2 - 1\n",
-    "last = layers[-1]\n",
-    "super_nodes, super_edges, node_map = fuse_to_super_order(last[\"nodes\"], last[\"edges\"], int(kk or 8), super_layer_idx, tail_heavy=True)\n",
-    "# Ensure super graph has run at least once\n",
-    "layers[-1][\"graph\"].synchronous_iteration() \n",
-    "layers.append({\"name\":f\"super{k_next}\", \"nodes\":super_nodes, \"edges\":super_edges, \"node_map\":node_map})\n",
-    "if super_layer_idx > 1:\n",
-    "    layers[super_layer_idx][\"graph\"] = build_super_graph(layers)\n",
-    "else:\n",
-    "    layers[super_layer_idx][\"graph\"] = build_super_graph(layers)\n",
-    "\n",
-    "\n",
-    "abs_layer_idx = 8\n",
-    "k = 4\n",
-    "last = layers[-1]\n",
-    "abs_nodes, abs_edges = copy_to_abs(last[\"nodes\"], last[\"edges\"], abs_layer_idx)\n",
-    "# Ensure super graph has run at least once\n",
-    "layers[-1][\"graph\"].synchronous_iteration() \n",
-    "layers.append({\"name\":f\"abs{k}\", \"nodes\":abs_nodes, \"edges\":abs_edges})\n",
-    "layers[abs_layer_idx][\"graph\"], layers[abs_layer_idx][\"Bs\"], layers[abs_layer_idx][\"ks\"], layers[abs_layer_idx][\"k2s\"] = build_abs_graph(layers)\n",
-    "\"\"\"\n",
     "\n",
     "\n",
     "\"\"\"\n",
