--- a/hierarchy/test_linear (Copy).ipynb
+++ b/hierarchy/test_linear (Copy).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "db67ca04",
    "metadata": {},
    "outputs": [],
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e7930430",
    "metadata": {},
    "outputs": [],
@@ -1520,10 +1520,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "edefd26f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "0 101089344.5794572\n",
+      "0 99117762.9777421\n",
+      "1 93472676.74641348\n",
+      "2 81216946.92221421\n",
+      "3 60764519.81885415\n",
+      "4 44846122.97234041\n",
+      "5 37681013.62228483\n",
+      "6 34425457.01014782\n",
+      "7 31314304.65222162\n",
+      "8 28258940.91830768\n",
+      "9 25613438.511047196\n",
+      "10 23416615.787896287\n",
+      "11 21187442.170679428\n",
+      "12 18912041.63080665\n",
+      "13 16593571.60966635\n",
+      "14 14328361.945581308\n",
+      "15 12135673.713625671\n",
+      "16 9538801.845862439\n",
+      "17 7012843.175017026\n",
+      "18 4819820.326769719\n",
+      "19 3501050.3206544677\n",
+      "20 2616284.895362895\n",
+      "21 1738106.951841042\n",
+      "22 866153.5700093742\n",
+      "23 2337.9247868837806\n"
+     ]
+    }
+   ],
    "source": [
     "#N = 128\n",
     "N = 512\n",
@@ -1574,62 +1607,50 @@
     "print(graph_diameter(layers[0][\"nodes\"], layers[0][\"edges\"], ignore_prior=True))\n",
     "\n",
     "print(0, energy_map(gbp_graph, include_priors=True, include_factors=True))\n",
-    "for i in range(500):\n",
+    "for i in range(24):\n",
     "    gbp_graph.synchronous_iteration() \n",
-    "    print(gbp_graph.energy())\n",
     "    print(i, energy_map(gbp_graph, include_priors=True, include_factors=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8a121dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(gbp_graph.n_var_nodes):\n",
-    "    print(gbp_graph.var_nodes[i].belief.lam)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfd1b0b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total = 0\n",
-    "a = layers[0][\"graph\"].joint_distribution_cov()[0].reshape(layers[0][\"graph\"].n_var_nodes,2)[:,:]\n",
-    "\n",
-    "for i,v in enumerate(layers[0][\"graph\"].var_nodes[:layers[0][\"graph\"].n_var_nodes]):\n",
-    "    gt = np.asarray(v.GT[0:2], dtype=float)\n",
-    "    r = np.asarray(a[i][0:2], dtype=float) - gt\n",
-    "    total += 0.5 * float(r.T @ r)\n",
-    "print(total)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52ce8ad9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb8bc60a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0dcec503",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 99117762.9777421\n",
+      "1 93472676.74641348\n",
+      "2 81216946.92221421\n",
+      "3 60764519.81885415\n",
+      "4 44846122.97234041\n",
+      "5 37681013.62228483\n",
+      "6 34425457.01014782\n",
+      "7 31314304.65222162\n",
+      "8 28258940.91830768\n",
+      "9 25613438.511047196\n",
+      "10 23416615.787896287\n",
+      "11 21187442.170679428\n",
+      "12 18912041.63080665\n",
+      "13 16593571.60966635\n",
+      "14 14328361.945581308\n",
+      "15 12135673.713625671\n",
+      "16 9538801.845862439\n",
+      "17 7012843.175017026\n",
+      "18 4819820.326769719\n",
+      "19 3501050.3206544677\n",
+      "20 2616284.895362895\n",
+      "21 1738106.951841042\n",
+      "22 866153.5700093742\n",
+      "23 2337.9247868837806\n",
+      "2337.9247868837806\n",
+      "Iter 001 | Energy = 2156.816105\n"
+     ]
+    }
+   ],
    "source": [
     "N = 512\n",
     "step=25\n",
@@ -1663,7 +1684,7 @@
     "last = layers[-1]\n",
     "super_nodes, super_edges, node_map = fuse_to_super_order(last[\"nodes\"], last[\"edges\"], int(kk or 8), super_layer_idx, tail_heavy=True)\n",
     "# Ensure base graph has run at least once\n",
-    "for i in range(25):\n",
+    "for i in range(24):\n",
     "    layers[-1][\"graph\"].synchronous_iteration() \n",
     "    print(i, energy_map(layers[-1][\"graph\"], include_priors=True, include_factors=True))\n",
     "layers.append({\"name\":f\"super{k_next}\", \"nodes\":super_nodes, \"edges\":super_edges, \"node_map\":node_map})\n",
@@ -1777,10 +1798,10 @@
     "vg = VGraph(layers)\n",
     "energy_prev = 0\n",
     "counter = 0\n",
-    "for _ in range(500):\n",
+    "for _ in range(1):\n",
     "    vg.layers = layers\n",
     "    vg.r_reduced=2\n",
-    "    vg.eta_damping = 0.4\n",
+    "    vg.eta_damping = 0\n",
     "    vg.layers = vg.vloop()\n",
     "    energy = energy_map(layers[0][\"graph\"], include_priors=True, include_factors=True)\n",
     "    if np.abs(energy_prev-energy) < 1e-5:\n",
@@ -1806,10 +1827,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1feb8f55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  33.77824538 -319.19195985]\n",
+      "[  33.4303663  -316.11302393]\n",
+      "[[7.21656636e-11 0.00000000e+00]\n",
+      " [0.00000000e+00 7.21656636e-11]]\n",
+      "[[0.66495268 0.        ]\n",
+      " [0.         0.66495268]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(layers[0][\"graph\"].var_nodes[100].mu)\n",
     "print(layers[0][\"graph\"].var_nodes[100].GT)\n",
@@ -1819,12 +1853,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f9a7d40c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  33.77824538, -319.19195985])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layers[0][\"graph\"].var_nodes[100].prior.mu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "46dbfefd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2172.627927410766\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers[0][\"graph\"].synchronous_iteration()\n",
+    "print(energy_map(layers[0][\"graph\"], include_priors=True, include_factors=True))"
    ]
   },
   {
